--- a/package.json
+++ b/package.json
@@ -8,10 +8,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "gh-pages": "^6.2.0",
+    "mapbox-gl": "^3.7.0",
+    "os": "^0.1.2",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-map-gl": "^7.1.7",
     "react-scripts": "5.0.1",
+    "viewport-mercator-project": "^7.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
