--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@turf/bbox": "^7.1.0",
+    "axios": "^1.7.7",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "gh-pages": "^6.2.0",
